syntax = "proto3";

package dashboardapp.proto;

option java_package = "me.nikolaeva.dashboardapp.proto";
option java_multiple_files = true;

message AppConfig {
  GoogleOAuthConfig google_oauth_config = 1;
  PostgresqlConfig postgresql_config = 2;
  RunConfig run_config = 3;
}

message GoogleOAuthConfig {
  string client_id = 1;
  string client_secret = 2;
  string grant_type = 3;
  string redirect_url = 4;
  string response_type = 5;
  string scope = 6;
  string state = 7;
}

message PostgresqlConfig {
  string jdbc_url = 1;
}

message RunConfig {
  string port = 1;
  string base_url = 2;
  string ui_url = 3;
}